--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "filemanager-webpack-plugin": "3.0.0-beta.0",
+    "luxon": "^2.1.1",
     "react": "^17.0.1",
     "react-app-rewired": "2.1.6",
     "react-dom": "^17.0.1",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/luxon": "^2.0.7"
   }
 }
